discussion/kv_engine/177062/177062_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Turn FCManager::consumersMap into a folly::Sync set

Two changes here:
1. From mutex to folly::Synchronized, for easier thread safety
2. From map<Cookie, DcpConsumer*> to set<DcpConsumer*>

(2) is all what we need for modifying/accessing the structure as all
the related FCManager API takes DcpConsumer* in input.

Change-Id: Ie7d307de48dfd6685b5515f7321a714de1aae30c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-05 07:47:26.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-05 08:33:55.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18660/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:50:25: error: template argument for template type parameter must be a type [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Synchronized.h:563:17: note: template parameter is declared here
template <class T, class Mutex = SharedMutex>
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:50:30: error: no template named "set" in namespace "std"; did you mean "get"? [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
                             ^~~
                             get
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/utility:223:5: note: "get" declared here
    get(std::pair<_Tp1, _Tp2>& __in) noexcept
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18660/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:50:25:
error: template argument for template type parameter must be a type [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18660/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39861/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:50:30:
error: no template named "set" in namespace "std"; did you mean "get"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39861/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21557/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x7719f) in AnnotateRWLockAcquired  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21557/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28936/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyNo_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyNo_AlwaysBufferYes
[2022-07-05T08:25:10.242Z] unknown file: Failure
[2022-07-05T08:25:10.242Z] C++ exception with description "MemcachedConnection::recvDcpBufferAck not a buffer ack opcode request:{"bodylen":30,"cas":0,"datatype":"raw","extlen":0,"key":"<ud>connection_buffer_size</ud>","keylen":22,"magic":"ClientRequest","opaque":14,"opcode":"DCP_CONTROL","vbucket":0}" thrown in the test body.
[2022-07-05T08:25:10.242Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyNo_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (17 ms)
TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyNo_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28936/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8338/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8338/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17813/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47446/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8436/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19780/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20902/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20549/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
